--- a/productsdetails.html
+++ b/productsdetails.html
@@ -25,7 +25,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
+  <link href="./assets/css/main.css" rel="stylesheet">
 
 </head>
 
@@ -85,7 +85,7 @@
   <main class="main">
 
     <!-- Page Title -->
-    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/ai\ consulting.png);">
+    <div class="page-title" data-aos="fade" style="background-image: url(assets/img/);">
       <div class="container">
         <h1>Product Details</h1>
         <nav class="breadcrumbs">
